--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <div style="display: flex;gap: 10px;align-items: center; justify-content: center; margin-top: 20px;">
 
-  <div class="menuitems" onclick="menushow()"><a class="menulink">Settings ⚙️</a>
+  <div class="menuitems" onclick="menushow()"><div class="menulink">Settings ⚙️</div>
     <div id="settings" style="position: relative;">
       <div id="settings1" class="menuitems-content background-dark">
       <a class="contentlist" onclick="begin()">Beginner</a>
