--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <div id="w1" class="dialogboxbg background" style="display: none;cursor: wait;">&nbsp;</div>
   <div id="new" class="dialogboxbg hide background">
-    <div id="newdialog" class="dialogbox" style="width:20vw; height:170px;top:35%;left:35%;">
+    <div id="newdialog" class="dialogbox" style="width:20vw; height:160px;top:35%;left:35%;">
       <div class="dialogtitle background-dark"><div>&nbsp;Settings</div><div class="closebtn"><a onclick="hidedialog()">X</a></div></div>
       <div style="display: grid; grid-template-columns: 100%;">
           <div>
@@ -23,7 +23,7 @@
 
             </div>
               <div class="flexstyle">
-                <button class="controls margintb" style="width: 55%;" onclick="creategame()">ok</button>
+                <button class="controls" style="width: 55%;margin:17px;" onclick="creategame()">ok</button>
               </div>
           </div>
         </div>
@@ -32,7 +32,7 @@
 
   <h1 id="title">Minesweeper</h1>
 
-<div style="display: flex;gap: 10px;align-items: center; justify-content: center; margin-top: 20px;">
+<div style="display: flex;gap: 8px;align-items: center; justify-content: center; margin-top: 20px;">
 
   <div class="menuitems" onclick="menushow()"><div class="menulink">Settings ⚙️</div>
     <div id="settings" style="position: relative;">
@@ -45,19 +45,21 @@
     </div>
   </div>
 
-  <div><button class="btnclass" onclick="reset()">Reset</button></div>
+  <div><button id="reset" class="btnclass" onclick="reset()">Reset</button></div>
   <div id="time" style="padding-left:8px;padding-right:8px;border:3.2px solid rgb(218, 216, 216); background-color: rgb(2, 2, 86);color:rgb(57, 164, 251)">00:00</div>
-  <div class="theme1" onclick="changecolor('blue')"></div>
-  <div class="theme2" onclick="changecolor('red')"></div>
-  <div class="theme3" onclick="changecolor('green')"></div>
+  <div class="themebtn theme1" onclick="changecolor('blue')"></div>
+  <div class="themebtn theme2" onclick="changecolor('red')"></div>
+  <div class="themebtn theme3" onclick="changecolor('green')"></div>
+  <div class="themebtn theme4" onclick="changecolor('purp')"></div>
+  <div class="themebtn theme7" onclick="changecolor('yellow')"></div>
+  <div class="themebtn theme5" onclick="changecolor('white')"></div>
+  <div class="themebtn theme6" onclick="changecolor('black')"></div>
 </div>
 
     <div id="gamegrid" class="set"></div>
 
 
-  <footer>
-    .
-  </footer>
+  <footer id="footer"></footer>
   <script src="index.js"></script>
 </body>
 
