--- a/index.html
+++ b/index.html
@@ -17,30 +17,18 @@
     background-color: rgba(0, 0, 0, 0.7);
     width: 100vw;
     height: 100vh;
-    top:0; left:0; z-index: 100;
+    top:0; left:0; z-index: 100; display: none;
   }
   </style>
   <script>
-    var rotation=0;const loadingid=setInterval(()=>{
-      rotation+=3; if(rotation>360)rotation=3; document.getElementById("loadingbox").style.transform="rotate("+rotation+"deg)";
-    },1);
+    //var rotation=0;const loadingid=setInterval(()=>{rotation+=3; if(rotation>360)rotation=3; document.getElementById("loadingbox").style.transform="rotate("+rotation+"deg)";},1);
   </script>
 <body>
 
-  <div id="loading">
-    <div id="loadingbox" style="position: absolute;top:43vh;left:49vw;">
-      <div style="border-radius: 30px;border:10px solid rgb(18, 174, 253);height: 20px;width: 20px;">
-        <div class="geartooth" style="top:-6px;left:16px;"></div>
-        <div class="geartooth" style="top:0px;left:31px;rotate: -45deg;"></div>
-        <div class="geartooth" style="top:1px;left:-1px;rotate: -45deg;"></div>
-        <div class="geartooth" style="top:17px;left:-7px;"></div>
-        <div class="geartooth" style="top:17px;left:37px;"></div>
-        <div class="geartooth" style="top:31px;left:1px;rotate: -45deg;"></div>
-        <div class="geartooth" style="top:31px;left:31px;rotate: -45deg;"></div>
-        <div class="geartooth" style="top:37px;left:16px;"></div>
-      </div>
-    </div>
-  </div>
+  <div id="loading"><div id="loadingbox" style="position: absolute;top:43vh;left:49vw;"><div style="border-radius: 30px;border:10px solid rgb(18, 174, 253);height: 20px;width: 20px;">
+        <div class="geartooth" style="top:-6px;left:16px;"></div><div class="geartooth" style="top:0px;left:31px;rotate: -45deg;"></div><div class="geartooth" style="top:1px;left:-1px;rotate: -45deg;"></div><div class="geartooth" style="top:17px;left:-7px;"></div>
+        <div class="geartooth" style="top:17px;left:37px;"></div><div class="geartooth" style="top:31px;left:1px;rotate: -45deg;"></div><div class="geartooth" style="top:31px;left:31px;rotate: -45deg;"></div><div class="geartooth" style="top:37px;left:16px;"></div>
+  </div></div></div>
 
   <div id="w1" class="dialogboxbg background" style="display: none;cursor: wait;">&nbsp;</div>
   <div id="new" class="dialogboxbg hide background">
