--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     background-color: rgba(0, 0, 0, 0.7);
     width: 100vw;
     height: 100vh;
-    top:0; left:0; z-index: 100; display: none;
+    top:0; left:0; z-index: 100;
   }
   </style>
   <script>
-    //var rotation=0;const loadingid=setInterval(()=>{rotation+=3; if(rotation>360)rotation=3; document.getElementById("loadingbox").style.transform="rotate("+rotation+"deg)";},1);
+  var rotation=0;const loadingid=setInterval(()=>{rotation+=3; if(rotation>360)rotation=3; document.getElementById("loadingbox").style.transform="rotate("+rotation+"deg)";},1);
   </script>
 <body>
 
