--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     height:8px;
     width:8px;
     background-color: rgb(18, 174, 253);
-  } 
+  }
   #loading{
     position: absolute;
     background-color: rgba(0, 0, 0, 0.7);
@@ -31,20 +31,21 @@
   </div></div></div>
 
   <div id="w1" class="dialogboxbg background" style="display: none;cursor: wait;">&nbsp;</div>
+  
   <div id="new" class="dialogboxbg hide background">
-    <div id="newdialog" class="dialogbox" style="width:20vw; height:160px;left:35%;">
-      <div class="dialogtitle background-dark"><div>&nbsp;Settings</div><div class="closebtn"><a onclick="hidedialog()">X</a></div></div>
+    <div id="newdialog" class="dialogbox" style="width:340px; height:160px;left:35%;">
+      <div class="dialogtitle background-dark"><div style="color:white;">&nbsp;Settings</div><div class="closebtn"><a onclick="hidedialog()">X</a></div></div>
       <div style="display: grid; grid-template-columns: 100%;">
           <div>
-            <p class="margintb">Create custom game:</p>
+            <p class="margintb" style="color:white;">Create custom game:</p>
             <div class="flexstyle">
-              <div><p class="margintb">Column:</p><input id="newwidth" onchange="validatenumber('newwidth')" class="controls" type="number" value="25" style="width: 4vw;"></div>
-              <div><p class="margintb">&nbsp;</p><button class="controls marginlr" onclick="swapheightwidth()">⇆</button></div>
-              <div><p class="margintb">Row:</p><input id="newheight" onchange="validatenumber('newheight')" class="controls" type="number" value="25" style="width: 4vw;"></div>
-              <div><p class="margintb">Mines:</p><input id="newmines" onchange="validatenumber('newmines')" class="controls" type="number" value="100" style="width: 4vw;"></div>
+              <div><p class="margintb" style="color:white;">Column:</p><input id="newwidth" onchange="validatenumber('newwidth')" class="controls" type="number" value="25" style="width: 70px;"></div>
+              <div><p class="margintb" style="color:white;">&nbsp;</p><button class="controls marginlr" onclick="swapheightwidth()">⇆</button></div>
+              <div><p class="margintb" style="color:white;">Row:</p><input id="newheight" onchange="validatenumber('newheight')" class="controls" type="number" value="25" style="width: 70px;"></div>
+              <div><p class="margintb" style="color:white;">Mines:</p><input id="newmines" onchange="validatenumber('newmines')" class="controls" type="number" value="100" style="width: 70px;"></div>
             </div>
               <div class="flexstyle">
-                <button class="controls" style="width: 55%;margin:17px;" onclick="creategame()">ok</button>
+                <button class="controls" style="width: 80px;margin:17px;" onclick="creategame()">Ok</button>
               </div>
           </div>
         </div>
