--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
   <div class="menuitems" onclick="menushow()"><div class="menulink">Settings ⚙️</div>
     <div id="settings" style="position: relative;">
       <div id="settings1" class="menuitems-content background-dark">
-      <a class="contentlist" onclick="begin()">Beginner</a>
-      <a class="contentlist" onclick="inter()">Intermediate</a>
-      <a class="contentlist" onclick="hard()">Hard</a>
-      <a class="contentlist" onclick="showdialog('new')">Custom...</a>
+      <a class="contentlist" onclick="begin()">Beginner Ctrl+Z</a>
+      <a class="contentlist" onclick="inter()">Intermediate Ctrl+X</a>
+      <a class="contentlist" onclick="hard()">Hard Ctrl+C</a>
+      <a class="contentlist" onclick="showdialog('new')">Custom Ctrl+V</a>
       </div>
     </div>
   </div>
 
   <div><button id="reset" class="btnclass" onclick="reset()">Reset</button></div>
-  <div id="time" style="padding-left:8px;padding-right:8px;border:3.2px solid rgb(218, 216, 216); background-color: rgb(2, 2, 86);color:rgb(57, 164, 251)">00:00</div>
+  <div id="time" style="padding-left:8px;padding-right:8px;border:3.2px solid rgb(218, 216, 216); background-color: rgb(2, 2, 86);color:rgb(157, 211, 255)">00:00</div>
   <div class="themebtn theme1" onclick="changecolor('blue')"></div>
   <div class="themebtn theme2" onclick="changecolor('red')"></div>
   <div class="themebtn theme3" onclick="changecolor('green')"></div>
