--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         box-shadow: 0 2px 2px rgba(0, 0, 0, 0.295) inset;
         cursor: pointer;
       }
-      .levelbtn:hover{ backdrop-filter: brightness(160%); }
+      .levelbtn:hover{ filter:brightness(140%); }
     </style>
 <body>
 
@@ -144,7 +144,6 @@
       </div>
     </div>
   </div>
-
 
   <div id="pausewindow"class="dialogboxbg background" style="display: none;font-size: 80px; backdrop-filter: blur(7px) ; border-radius: 5px; color: white;"><div style="display:flex;justify-content:center;align-items:center;height:100%;width:100%;"><div>Pause</div></div></div>
   
