--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       }
       .hstitle:hover{ backdrop-filter: brightness(110%); }
       #scoreboard{
-        width: 170px; height: 160px; display: flex; overflow: scroll; scrollbar-width:none; flex-direction: column;
+        width: 170px; height: 160px; display: flex; overflow: scroll; scrollbar-width:thin; flex-direction: column;
         padding-bottom: 2px; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px; box-shadow: 0 2px 5px rgba(0, 0, 0, 0.319);
       }
       .scorerow{
