--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
   </div>
 
-  <h1 id="title">Minesweeper</h1>
+<Div style="display: flex;align-items: center;justify-content: center; width: 100vw;"><h1 id="title">Minesweeper</h1><Div id="DragonGod" onclick="AwakeDragonGod()" style="font-size: 47px;">🐲</Div></Div>
 
 <div style="display: flex;gap: 8px;align-items: center; justify-content: center; margin-top: 10px;height: 40px;">
 
